panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__call__test_call_varargs_with_params_on_stack.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/call/test_call_varargs_with_params_on_stack.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_call_varargs_with_params_on_stack.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~1 `fn(argc: int, argv: ptr<ptr<char>>) -> int`
      (params
         argc~3 `int`
         argv~4 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` (argv~4 `ptr<ptr<char>>`) (sign-extend `unsigned long` (1 `int`)))))
               (1 `int`)
               (2 `int`)
               (3 `int`)
               (4 `int`)
               (5 `int`)
               (6 `int`)
               (7 `int`)
               (8 `int`)
               (9 `int`)
               (add `int` (argc~3 `int`) (42 `int`)))))))

----- stderr -----
