panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__call__test_params_on_stack.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/call/test_params_on_stack.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_params_on_stack.c"
   (declaration external f~0 `fn(∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int) -> int` ∅)
   (function-definition external
      id~1 `fn(n: int) -> int`
      (params
         n~3 `int`)
      (compound-statement
         (return (n~3 `int`))))
   (function-definition external
      main~4 `fn() -> int`
      (compound-statement
         (return
            (call `int`
               (addressof `ptr<fn(∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int) -> int>`
                  (f~0 `fn(∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int) -> int`))
               (1 `int`)
               (2 `int`)
               (3 `int`)
               (4 `int`)
               (5 `int`)
               (6 `int`)
               (7 `int`)
               (8 `int`)
               (9 `int`)
               (call `int`
                  (addressof `ptr<fn(n: int) -> int>`
                     (id~1 `fn(n: int) -> int`))
                  (10 `int`))
               (11 `int`)))))
   (function-definition external
      f~0 `fn(a1: int, a2: int, a3: int, a4: int, a5: int, a6: int, a7: int, a8: int, a9: int, a10: int, a11: int) -> int`
      (params
         a1~8 `int`
         a2~9 `int`
         a3~10 `int`
         a4~11 `int`
         a5~12 `int`
         a6~13 `int`
         a7~14 `int`
         a8~15 `int`
         a9~16 `int`
         a10~17 `int`
         a11~18 `int`)
      (compound-statement
         (return (a10~17 `int`)))))

----- stderr -----
