panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__call__test_params_on_stack_with_addressof_operator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/call/test_params_on_stack_with_addressof_operator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_params_on_stack_with_addressof_operator.c"
   (function-definition external
      seven_params~0 `fn(x1: int, x2: int, x3: int, x4: int, x5: int, x6: int, x7: int) -> void`
      (params
         x1~2 `int`
         x2~3 `int`
         x3~4 `int`
         x4~5 `int`
         x5~6 `int`
         x6~7 `int`
         x7~8 `int`)
      (compound-statement))
   (function-definition external
      main~9 `fn(argc: int, ∅: ptr<ptr<char>>) -> int`
      (params
         argc~11 `int`
         main.unnamed_parameter.1~12 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn(x1: int, x2: int, x3: int, x4: int, x5: int, x6: int, x7: int) -> void>`
                  (seven_params~0 `fn(x1: int, x2: int, x3: int, x4: int, x5: int, x6: int, x7: int) -> void`))
               (1 `int`)
               (2 `int`)
               (3 `int`)
               (4 `int`)
               (5 `int`)
               (6 `int`)
               (7 `int`)))
         (definition value~13 `int` (27 `int`))
         (definition p~14 `ptr<int>`
            (addressof `ptr<int>`
               (value~13 `int`)))
         (return (deref `int` (p~14 `ptr<int>`))))))

----- stderr -----
