panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__call__test_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/call/test_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_simple.c"
   (function-definition external
      f~0 `fn(x: int) -> int`
      (params
         x~2 `int`)
      (compound-statement
         (return (x~2 `int`))))
   (function-definition external
      main~3 `fn() -> int`
      (compound-statement
         (definition x~5 `int` (42 `int`))
         (definition y~6 `int`
            (call `int`
               (addressof `ptr<fn(x: int) -> int>`
                  (f~0 `fn(x: int) -> int`))
               (x~5 `int`)))
         (return (y~6 `int`)))))

----- stderr -----
