panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__call__test_simple_declaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/call/test_simple_declaration.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_simple_declaration.c"
   (declaration external f~0 `fn(∅: int) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (return
            (call `int`
               (addressof `ptr<fn(∅: int) -> int>`
                  (f~0 `fn(∅: int) -> int`))
               (42 `int`)))))
   (function-definition external
      f~0 `fn(x: int) -> int`
      (params
         x~5 `int`)
      (compound-statement
         (return (x~5 `int`)))))

----- stderr -----
