panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__call__test_standard_lib_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/call/test_standard_lib_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_standard_lib_function.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (declaration external isalnum~2 `fn(∅: int) -> int` ∅)
         (return
            (not-equal `int`
               (call `int`
                  (addressof `ptr<fn(∅: int) -> int>`
                     (isalnum~2 `fn(∅: int) -> int`))
                  (100 `int`))
               (0 `int`))))))

----- stderr -----
