panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__call__test_void_return.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/call/test_void_return.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_void_return.c"
   (function-definition external
      f~0 `fn() -> void`
      (compound-statement))
   (function-definition external
      main~2 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (f~0 `fn() -> void`)))))))

----- stderr -----
